# tari-universe

./: .gitignore  .prettierrc  LICENSE  README.md  bun.lockb  config.toml  error_page.html  package-lock.json  package.json  registry.json  tapplets-registry.manifest.json  tsconfig.json  vite.config.ts
.github/workflows/: build_bin.yml  pr_signed_commits_check.yml  pr_title.yml
dist-isolation/: index.js
locales/en/: common.json  components.json  errors.json  navigation.json
locales/pl/: common.json  components.json  errors.json  navigation.json
src/: App.css  App.tsx  ErrorContext.tsx  ProviderContext.tsx  TransactionConfirmationContext.tsx  error_page.tsx  i18initializer.ts  main.tsx  styles.css  types.ts
src-tauri/: .env  Cargo.toml  config.toml  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/log4rs/: tapplet_sample.yml  universe_sample.yml  wallet_daemon_sample.yml
src-tauri/migrations/2024-04-25-073047_create_tapplets/: down.sql  up.sql
src-tauri/migrations/2024-04-25-073069_create_tapplets/: down.sql  up.sql
src-tauri/src/: commands.rs  constants.rs  deserializers.rs  download_utils.rs  error.rs  fs.rs  hash_calculator.rs  lib.rs  main.rs  progress_tracker.rs  registry_types.rs  rpc.rs  tapplet_installer.rs  tapplet_server.rs  wallet_daemon.rs
src-tauri/src/database/: mod.rs  models.rs  schema.rs  store.rs
src-tauri/src/interface/: dev_tapplet.rs  mod.rs  registry.rs  tapplet.rs
src-tauri/src/tests/: account_test.rs  mod.rs
src-tauri/src/utils/: logging_utils.rs
src/components/: Account.tsx  ActiveDevTapplet.tsx  ActiveTapplet.tsx  AddDevTappletDialog.tsx  BalanceUpdate.tsx  DevTapplet.tsx  ErrorPage.tsx  ErrorSnackBar.tsx  Installer.tsx  SelectAccount.tsx  Tapplet.tsx  TappletInstaller.tsx  TappletLauncher.tsx  TappletRegistry.tsx  TappletsInstalled.tsx  TappletsList.tsx  TappletsRegistered.tsx  TransactionConfirmationModal.tsx  Wallet.tsx
src/helpers/: address.ts  provider.ts  transaction.ts
src/provider/: TUInternalProvider.ts  TappletProvider.ts  TariUniverseProvider.ts  index.ts  ipc_transport.ts  json_rpc.tsx  types.ts  wallet_daemon.ts
src/store/: store.ts
src/store/account/: account.action.ts  account.selector.ts  account.slice.ts  account.types.ts
src/store/devTapplets/: devTapplets.action.ts  devTapplets.selector.ts  devTapplets.slice.ts  devTapplets.types.ts
src/store/error/: error.constants.ts  error.selector.ts  error.slice.ts  error.types.ts
src/store/installedTapplets/: installedTapplets.action.ts  installedTapplets.selector.ts  installedTapplets.slice.ts  installedTapplets.types.ts
src/store/metadata/: metadata.constants.ts  metadata.selector.ts  metadata.slice.ts  metadata.types.ts
src/store/provider/: provider.action.ts  provider.constants.ts  provider.selector.ts  provider.slice.ts  provider.types.ts
src/store/provider/actions/: provider.action.ts
src/store/registeredTapplets/: registeredTapplets.action.ts  registeredTapplets.constants.ts  registeredTapplets.selector.ts  registeredTapplets.slice.ts  registeredTapplets.types.ts
src/store/registeredTapplets/actions/: registeredTapplets.action.ts
src/store/simulation/: simulation.action.ts  simulation.selector.ts  simulation.slice.ts  simulation.types.ts
src/store/tappletProviders/: tappletProviders.action.ts  tappletProviders.selector.ts  tappletProviders.slice.ts  tappletProviders.types.ts
src/store/transaction/: transaction.action.ts  transaction.constants.ts  transaction.selector.ts  transaction.slice.ts  transaction.types.ts
src/store/transactionConfirmation/: transactionConfirmation.constants.ts  transactionConfirmation.selector.ts  transactionConfirmation.slice.ts  transactionConfirmation.types.ts
src/types/: invoke.ts  invoke.types.ts  tapplet.ts  tariPermissions.ts  transaction.ts  wallet.ts
src/types/tapplet/: Tapplet.ts  index.ts
src/views/: Tabs.tsx
tapplets/tapplet-example/: index.html
tapplets/tapplet-example/assets/: index-BEzrpNzu.js  index-CWaXWWj_.js  index-GP13bPnN.css  index-a3kgLT1b.js
