[package]
name = "wallet-daemon-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wallet_daemon_test_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["unstable", "webview-data-url"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34", default-features = false }
tokio-stream = "0.1.7"
tokio-util = "0.7.10"
tauri-utils = "=2.0.0-beta.14"
config = "0.13.4"
anyhow = "1.0.75"
tauri-plugin-http = { version = "2.0.0-beta.4", features = ["json"] }
axum = "0.7.5"
axum-jrpc = "0.3.2"
dotenvy = "0.15.7"
diesel = { ver = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { ver = "2.1.0", features = ["sqlite"] }
log4rs = { version = "1.3", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
    "console_appender",
] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tari_crypto = "0.20.0"
flate2 = "1.0.28"
tar = "0.4.40"

tari_dan_wallet_daemon = { path = "../../tari-dan/applications/tari_dan_wallet_daemon" }
tari_dan_wallet_sdk = { path = "../../tari-dan/dan_layer/wallet/sdk" }
tari_dan_wallet_storage_sqlite = { path = "../../tari-dan/dan_layer/wallet/storage_sqlite" }
tari_dan_wallet_crypto = { path = "../../tari-dan/dan_layer/wallet/crypto" }
tari_dan_common_types = { path = "../../tari-dan/dan_layer/common_types" }
tari_dan_app_utilities = { path = "../../tari-dan/applications/tari_dan_app_utilities" }
tari_wallet_daemon_client = { path = "../../tari-dan/clients/wallet_daemon_client" }

tari_shutdown = { git = "https://github.com/tari-project/tari.git", rev = "7d480c50513e93c70566b4c2ce91a7afee006f05" }
tari_common = { git = "https://github.com/tari-project/tari.git", rev = "7d480c50513e93c70566b4c2ce91a7afee006f05" }
base64 = "0.22.0"
sha2 = "0.10.8"
sha1 = "0.10.6"
