[package]
name = "tari-universe"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wallet_daemon_test_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = ["isolation"] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "isolation", "unstable", "webview-data-url"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34", default-features = false }
tokio-stream = "0.1.7"
tokio-util = "0.7.10"
tauri-utils = "2.0.0-beta"
config = "0.13.4"
anyhow = "1.0.75"
tauri-plugin-http = { version = "2.0.0-beta", features = ["json"] }
axum = "0.7.5"
axum-jrpc = "0.3.2"
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
log4rs = { version = "1.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "console_appender"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tari_crypto = "0.20.0"
flate2 = "1.0.28"
tar = "0.4.40"

tari_dan_wallet_daemon = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_wallet_sdk = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_wallet_storage_sqlite = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_wallet_crypto = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_app_utilities = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
base64 = "0.22.1"
sha2 = "0.10.8"
sha1 = "0.10.6"
thiserror = "1.0.60"
semver = "1.0.23"
log = "0.4.22"
async_zip = "0.0.17"
regex = "1.11.0"
futures-util = "0.3.31"
sanitize-filename = "0.5.0"
futures-lite = "2.3.0"
serde_yaml = "0.9.34"
open = "5.3.0"
